--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
   <title>Login</title>
   <link rel="stylesheet" href="estilos/style.css">
 </head>
@@ -11,14 +13,42 @@
   <main>
     <section id="login">
         <div id="imagem">
-          <img src="" alt="">
+          <img src="imagens/img-cel.jpg" alt="Imagem tela de login">
         </div>
         <div id="formulario">
           <h1>Login</h1>
           <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
         </div>
       <form action="cadastro.php" method="post">
-        
+
+ <div class="email">
+    <label for="iemail">
+       <span class="material-symbols-outlined">
+          person
+          </span>
+    </label>
+        <input type="email" name="email" id="iemail" autocomplete="email" placeholder="seu-email" required>
+   </div>
+
+  <div class="password">
+      <label for="isenha-on">
+          <span class="material-symbols-outlined">
+            key
+            </span>
+        </label>
+      <input type="password" name="senha" id="isenha-on" minlength="4" maxlength="15" placeholder="sua senha" autocomplete="current-password" required>
+  </div>
+
+    <div class="submit">
+        <label for="ientrar"></label>
+        <input type="submit" value="Entrar">
+    </div>
+    
+    <div class="forget-password">
+        <label for="isenha-off"></label>
+        <input type="submit" value="Esqueci a senha"> 
+    </div>
+
       </form>
     </section>
   </main>
