--- a/index.html
+++ b/index.html
@@ -13,42 +13,13 @@
   <main>
     <section id="login">
         <div id="imagem">
-          <img src="imagens/img-cel.jpg" alt="Imagem tela de login">
+          <!-- Aqui vai a imagem nas CSS-->
         </div>
         <div id="formulario">
           <h1>Login</h1>
           <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
         </div>
-      <form action="cadastro.php" method="post">
-
- <div class="email">
-    <label for="iemail">
-       <span class="material-symbols-outlined">
-          person
-          </span>
-    </label>
-        <input type="email" name="email" id="iemail" autocomplete="email" placeholder="seu-email" required>
-   </div>
-
-  <div class="password">
-      <label for="isenha-on">
-          <span class="material-symbols-outlined">
-            key
-            </span>
-        </label>
-      <input type="password" name="senha" id="isenha-on" minlength="4" maxlength="15" placeholder="sua senha" autocomplete="current-password" required>
-  </div>
-
-    <div class="submit">
-        <label for="ientrar"></label>
-        <input type="submit" value="Entrar">
-    </div>
-    
-    <div class="forget-password">
-        <label for="isenha-off"></label>
-        <input type="submit" value="Esqueci a senha"> 
-    </div>
-
+      <form action="login.php" method="post">
       </form>
     </section>
   </main>
