--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
 
   <title>Login</title>
   <link rel="stylesheet" href="estilos/style.css">
@@ -15,11 +15,18 @@
         <div id="imagem">
           <!-- Aqui vai a imagem nas CSS-->
         </div>
-        <div id="formulario">
+    <div id="formulario">
           <h1>Login</h1>
           <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
         </div>
       <form action="login.php" method="post">
+
+   <div class="email-senha">
+    <label for="iemail">
+          <span class="material-symbols-outlined"> mail</span>
+        </label>
+          <input type="email" placeholder="seu e-mail" autocomplete="email" maxlength="20" required>
+    </div>
       </form>
     </section>
   </main>
