--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <title>Login</title>
   <link rel="stylesheet" href="estilos/style.css">
+  <link rel="stylesheet" href="media-query/style.css">
 </head>
 <body>
   <main>
