--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>Login</title>
   <link rel="stylesheet" href="estilos/style.css">
   <link rel="stylesheet" href="media-query/style.css">
@@ -20,14 +19,27 @@
           <h1>Login</h1>
           <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
         </div>
-      <form action="login.php" method="post">
+      <form action="login.php" method="post" autocomplete="on">
+        <div class="campo">
+          <span class="material-symbols-outlined">
+            person
+            </span>
+            <input type="email" name="email" id="iemail" placeholder="Seu e-mail" autocomplete="email" required maxlength="30">
+            <label for="iemail">Login</label>
+        </div>
 
-   <div class="email-senha">
-    <label for="iemail">
-          <span class="material-symbols-outlined"> mail</span>
-        </label>
-          <input type="email" placeholder="seu e-mail" autocomplete="email" maxlength="20" required>
-    </div>
+        <div class="campo">
+          <span class="material-symbols-outlined">
+            key
+            </span>
+            <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+            <label for="isenha">Senha</label>
+        </div>
+
+        <input type="submit" value="Entrar">
+           <a href="esqueci.html">Esqueci a senha <span class="material-symbols-outlined">mail</span>
+        </a>
+  
       </form>
     </section>
   </main>
